--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-4">
-  <h1>Suivez le rythme du jeu : encodez les résultats en temps réel !</h1>
+  <h1>Encodez vos scores en temps réel !</h1>
   
   <!-- Bouton pour afficher le formulaire -->
   <button *ngIf="!showMatchForm" 
