--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -43,7 +43,7 @@ h1 {
 .match-details {
   background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
   border-radius: 10px;
-  padding: 1.5rem;
+  padding: 1rem;
   margin-bottom: 1rem;
   transition: all 0.3s ease;
 }
@@ -54,24 +54,25 @@ h1 {
 }
 
 .match-score {
-  font-size: 1.5em;
-  margin-bottom: 1rem;
+  font-size: 1.2em;
+  margin-bottom: 0.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
 .team-name {
   font-weight: 600;
   color: #2c3e50;
   text-transform: uppercase;
+  font-size: 1em;
 }
 
 .score {
   background-color: #3498db;
   color: white;
-  padding: 0.5rem 1rem;
+  padding: 0.3rem 0.5rem;
   border-radius: 5px;
   font-weight: bold;
 }
@@ -159,9 +160,16 @@ h1 {
   }
 
   .match-score {
-    flex-direction: column;
-    gap: 0.5rem;
-    font-size: 1.2em;
+    font-size: 1em;
+    gap: 0.3rem;
+  }
+
+  .team-name {
+    font-size: 0.9em;
+  }
+
+  .score {
+    padding: 0.2rem 0.4rem;
   }
 
   .score-modal-content {
@@ -402,11 +410,13 @@ h1 {
   text-align: right;
 }
 
-/* Ajouter ces styles */
+/* Style des boutons d'action */
 .match-actions {
   display: flex;
   justify-content: center;
   gap: 0.5rem;
+  flex-wrap: nowrap; /* Assurer que les boutons ne se replient pas */
+  overflow-x: auto; /* Permettre le défilement horizontal si nécessaire */
 }
 
 .btn-outline-danger {
@@ -422,12 +432,12 @@ h1 {
 /* Ajuster pour mobile */
 @media (max-width: 768px) {
   .match-actions {
-    flex-direction: column;
-    align-items: stretch;
+    flex-direction: row; /* S'assurer que les boutons sont en ligne */
+    align-items: center; /* Centrer verticalement les boutons */
   }
   
   .match-actions .btn {
-    margin: 0.2rem 0;
+    margin: 0.2rem; /* Ajouter un peu d'espace autour des boutons */
   }
 }
 
@@ -804,21 +814,11 @@ h1 {
   position: relative;
 }
 
-/* Ajuster les styles des boutons d'action */
-.match-actions {
-  display: flex;
-  justify-content: center;
-  gap: 0.5rem;
-}
-
-/* Ajuster pour mobile */
-@media (max-width: 768px) {
-  .match-actions {
-    flex-direction: column;
-    align-items: stretch;
-  }
-  
-  .match-actions .btn {
-    margin: 0.2rem 0;
-  }
+/* Style pour la date du match */
+.match-info {
+  text-align: center; /* Centrer le texte */
+  margin-bottom: 0.5rem; /* Réduire l'espace en bas */
+  margin-top: 0.2rem; /* Réduire l'espace au-dessus de la date */
+  font-size: 0.8em; /* Réduire la taille de la police */
+  color: #666; /* Optionnel : changer la couleur pour un aspect plus léger */
 }
